--- a/style.css
+++ b/style.css
@@ -5,9 +5,25 @@ body{
   height:100%;
   font-family: Arial, Helvetica, sans-serif;
   color: lightgray;
- 
+  overflow-x: hidden;
+}
+html {
+  scroll-behavior: smooth;
 }
 
+.home{
+  position: fixed;
+  bottom:12px;
+  right:15px;
+  z-index: 998;
+}
+.home-but{
+  background-color:lightgray ;
+  border:none;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.479);
+  cursor: pointer;
+  
+}
 
 .container{
   position: relative;
@@ -23,6 +39,25 @@ body{
 
   
 }
+.logo{
+  margin-right: 30px;
+  margin-left:42px;
+  font-size: 60px;
+}
+
+.namet{
+  margin-top:40px;
+  margin-left:-20px;
+
+
+
+
+}
+
+
+
+
+
 
 .back-vid{
   position: fixed;
@@ -54,7 +89,7 @@ header{
   backdrop-filter: blur(10px);
   padding: 0 30px;
   box-shadow: 0 0 15px #72a1de68;
-  z-index:999;
+  z-index:998;
 
 }
 .left{
@@ -76,6 +111,7 @@ header ul{
   background-color: rgba(0,0,69,0.38);
   backdrop-filter: blur(10px);
   box-shadow: 0 0 10px #727fde65;
+  margin-left: -40px;
 }
 header ul li{
   list-style-type: none;
@@ -113,6 +149,21 @@ header ul a{
   z-index:-1;
 
 }
+
+
+.hero-vid{
+   margin-right: -12%;
+   margin-bottom: -20%;
+  position: absolute;
+    overflow-x: hidden;
+}
+.hero-vid img{
+  width:1000px;
+}
+
+
+
+
 .blackhole video{
   width:100%;
   margin-top: -23.5%;
@@ -525,12 +576,14 @@ opacity:0.7;
   display: flex;
   align-items: start;
   justify-content: center;
+  cursor: pointer;
 }
 
 .skill-image{
   width:70%;
   mix-blend-mode: lighten;
   opacity:0.7;
+  
 }
 
 .designer{
@@ -729,11 +782,181 @@ opacity:0.7;
     left: 0;
     height: 40px;
     background-color: rgba(255, 255, 255, 0.121);
-    z-index: 999;
+    z-index: 997;
     padding: 0 3rem;
 }
 
 
+.menu-icon{
+    cursor: pointer;
+    font-size: 30px;
+    color: lightgray;
+}
+
+.sidebar{
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 40%;
+    width: 0%;
+    background-color: #000000b8;
+    z-index: 998;
+    box-shadow: 0 0 25px rgba(255, 255, 255, 0.479);
+    backdrop-filter: blur(10px);
+    opacity: 0;
+    border-bottom-left-radius: 100%;
+    
+}
+
+.close{
+    font-size: 50px;
+    color: lightgray;
+    padding-left: 10px;
+    cursor: pointer;
+    z-index: 999;
+    display:inline-block;
+}
+
+.sidebar ul{
+    padding-left: 20px;
+}
+
+.sidebar ul li{
+    list-style: none;
+    margin-bottom: 30px;
+}
+
+.sidebar ul li a{
+    text-decoration: none;
+    color: lightgray;
+    font-size: 30px;
+    font-weight: 900;
+    text-shadow:0 0 15px #4c4c4c;
+}
+
+.box-icons{
+  margin-top:20px;
+  margin-left:60px;
+  text-wrap:nowrap;
+}
+
+.sidebar.open-sidebar{
+    animation: openSid 1.1s forwards;
+}
+
+@keyframes openSid {
+    to{
+        width: 45%;
+        opacity: 1;
+        bottom: 0;
+        border-radius: 0;
+    }
+}
+
+
+
+.sidebar.close-sidebar{
+    animation: closeSid 1.1s forwards;
+}
+
+@keyframes closeSid {
+    from{
+        width: 45%;
+        opacity: 1;
+        bottom: 0;
+        border-radius: 0;
+    }
+    to{
+        width: 0;
+        opacity: 0;
+        border-bottom-left-radius: 100%;
+       
+    }
+
+  }
+
+  .close:hover{
+    color: #787777;
+    transition: 0.3s;
+  }
+
+  .sidebar ul li a:hover{
+    color:#787777;
+    transition: 0.3s;
+  }
+
+  
+
+
+
+
+
+/* BLUR EFFECT ANIMAION */
+
+.autoBlur{
+    animation: autoBlurAnimation linear both;
+    animation-timeline: view();
+
+}
+@keyframes autoBlurAnimation{
+    0%{
+        filter: blur(30px);
+    }
+    35%,65%{
+        filter: blur(0);
+        opacity: 1;
+    }
+    100%{
+        filter: blur(30px);
+        opacity: 0;
+    }
+}
+
+
+
+
+
+/* AUTO DISPLAY ANIMAION */
+.autoDisplay{
+    animation: autoDisplayAnimation both;
+    animation-timeline: view();
+
+}
+
+@keyframes autoDisplayAnimation{
+    from{
+        filter: blur(10px);
+        transform: translateY(-150px) scale(0);
+    } 50%{
+        opacity: 1;
+        filter: blur(0px);
+        transform: translateX(0) scale(1);
+    }
+}
+
+
+
+
+/* FADEIN_LEFT */
+
+.fadein-left{
+    animation: fadeInLeftAnimation both;
+    animation-timeline: view();
+}
+
+@keyframes fadeInLeftAnimation{
+    0%{
+        opacity: 0;
+        transform: translateX(-500px) scale(0.2);
+        filter: blur(10px);
+    } 35%,65%{
+        opacity: 1;
+        transform: translateX(0) scale(1);
+        filter: blur(0px);
+    }100%{
+        filter: blur(10px);
+    }
+}
 
 
 
@@ -776,3 +999,126 @@ opacity:0.7;
     height: auto;
   }
 }
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1126px) {
+  .blackhole video{
+    margin-top: -20%;
+  }
+  .hero-info h1{
+    font-size: 40px;
+    max-width: 400px;
+    line-height: 40px;
+
+  }
+
+.hero-vid img{
+  width:300px;
+  right:0;
+ margin-bottom:80%;
+ margin-right:30px;
+}
+
+.midpor{
+  display:none;
+}
+
+.sec-title{
+  font-size: 30px;
+}
+
+.card h1,.card1 h1{
+  font-size: 20px;
+  
+}
+.info-cards{
+  grid-template-columns: auto;
+  
+}
+.info-cards .card
+{
+  grid-row:span 2;
+  height: 70vh;;
+}
+
+.card1 img{
+  height:150px;
+}
+.card1 h1{
+  bottom:35%
+
+}
+
+.pro-vid{
+  min-width: 300px;
+  width: 90%;
+  padding-right: 0;
+  margin-left:34px;
+}
+
+.pro-info{
+  margin-right:30px;
+  padding-left:0;
+  
+}
+#vox h1{
+  font-size: 30px;
+  max-width: 300px;
+}
+.slider{
+  margin-top:40px;
+}
+
+
+}
+
+
+
+
+
+
+@media screen and (max-width: 1300px) and (min-width:1000px) {
+
+.hero-vid img{
+  width:700px;
+  right:0;
+ margin-bottom:50%;
+ margin-right:30px;
+}
+}
+
+
+@media screen and (max-width:  768px) {
+  
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
